# HwMonitor

./: .gitignore  README.md  cli-Cargo.toml  preview.html
src/: index.html  index_backup.html  japan-script.js  japan-styles.css  japan.html  script.js  script_fixed.js  styles.css  styles_backup.css
src-tauri/: Cargo.toml  alpha-splash.exe.manifest  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  main.rs
src/assets/fonts/capitol_city/: capitolcity.txt
