[package]
name = "alpha-splash"
version = "0.1.0"
description = "A simple ALPHA splash screen app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [], default-features = false }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["devtools"] }
tauri-plugin-shell = "2.0"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
wmi = { version = "0.14", optional = true }
systemstat = "0.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
windows-temp = ["wmi"]
